# dxi-mcp-server

./: .coverage  .dockerignore  .env.example  .env.template  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  LICENSE.md  PROJECT_COMPLETION.md  README.md  dct_mcp_entry.py  docker-compose.yml  gitignore  pyproject.toml  requirements.txt  start_mcp_server_python.sh  start_mcp_server_uv.sh  start_mcp_server_windows.bat  start_mcp_server_windows.ps1  start_mcp_server_windows_python.bat  start_mcp_server_windows_python.ps1  start_mcp_server_windows_uv.bat  start_server.sh  start_server_direct.sh  swagger.json
.claude/: DLPXECO-13921-state.json  DLPXECO-13984-state.json  DLPXECO-13984-ticket.json  architecture.md  retrospectives.md  settings.json  test-infra.md
.github/: copilot-instructions.md
docs/: DLPXECO-13635-build-output.md  DLPXECO-13635-design.md  DLPXECO-13635-doc-updates.md  DLPXECO-13635-eval-results.md  DLPXECO-13635-functional.md  DLPXECO-13635-plan.md  DLPXECO-13635-test-evidence.md  DLPXECO-13635-test-plan.md  DLPXECO-13635-token-usage.md  DLPXECO-13635-validation.md  DLPXECO-13635-vision.md  DLPXECO-13921-design.md  DLPXECO-13921-functional.md  DLPXECO-13921-vision.md  DLPXECO-13965-build-output.md  DLPXECO-13965-coverage.md  DLPXECO-13965-design.md  DLPXECO-13965-eval-results.md  DLPXECO-13965-functional.md  DLPXECO-13965-plan.md  DLPXECO-13965-test-evidence.md  DLPXECO-13965-test-plan.md  DLPXECO-13965-validation.md  DLPXECO-13965-vision.md  DLPXECO-13985-architecture-design.docx  DLPXECO-13985-design.md  DLPXECO-13985-functional.md  (+2 more)
(+147 files in other folders)
