[project]
name = "mcpserverdelphix"
version = "0.1.0"
description = "Delphix DCT API MCP Server - A Model Context Protocol server for the Delphix Data Control Tower API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.0",
    "httpx>=0.24.0",
]

[project.scripts]
dct-mcp-server = "dxi_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dxi_mcp_server"]
