[project]
name = "dxi-mcp-server"
version = "0.1.0"
description = "Delphix DCT API MCP Server - A Model Context Protocol server for the Delphix Data Control Tower API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.0",
    "httpx>=0.24.0",
    "uv>=0.9.0",
    "aiohttp>=3.13.0",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
dxi-mcp-server = "dxi_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dxi_mcp_server"]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
]
